cf/cf-ec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
    EnvType:
        Description: The env type
        Type: String
    SSHKey:
        Type: AWS::EC2::KeyPair::KeyName
        Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
Mappings:
    RegionMap:
        us-east-1:
            "v1": "ami-0761dd91277e34178"
            "v2": "ami-02354e95b39ca8dec"
        us-west-1:
            "32": "ami-42345678"
            "64": "ami-43456789"
Conditions:
    CreateProdResources: !Equals [ !Ref EnvType, prod ]
Resources:
    Ec2Instance:
        Type: "AWS::EC2::Instance"
        Properties:
            ImageId: !FindInMap [RegionMap, !Ref "AWS::Region","v2"]
            InstanceType:  "t2.micro"
            KeyName: !Ref SSHKey
            SecurityGroups:
                - !Ref SSHSecurityGroup
            UserData:
                Fn::Base64: |
                    #!/bin/bash -xe
                    yum update -y
                    yum install -y httpd
                    systemctl start httpd
                    systemctl enable httpd
                    echo "Hello world from user data" > /var/www/html/index.html
    MountPoint:
        Type: "AWS::EC2::Volume"
        DeletionPolicy: Snapshot
        Condition: CreateProdResources
        Properties:
            Size: 100
            AvailabilityZone:
                !GetAtt Ec2Instance.AvailabilityZone
    SSHSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Used to allow SSH and HTTP access
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  FromPort: 22
                  IpProtocol: tcp
                  ToPort: 22
                - CidrIp: 0.0.0.0/0
                  FromPort: 80
                  IpProtocol: tcp
                  ToPort: 80
Outputs:
    Ec2InstanceIp:
        Description: The EC2 instance that was created.
        Value: !GetAtt Ec2Instance.PublicIp
        Export:
            Name: Ec2InstanceIp
